cmake_minimum_required(VERSION 3.16)
project(TcpServer)
set(CMAKE_CXX_STANDARD 14)
aux_source_directory(./Log/ LOG_SRC)
add_library(network util.cpp util.h Socket.cpp Socket.h InetAddress.cpp InetAddress.h Epoll.cpp Epoll.h   Channel.h Channel.cpp  Acceptor.cpp Acceptor.h Buffer.cpp Buffer.h Connection.cpp Connection.h EventLoop.cpp EventLoop.h Server.cpp Server.h)
add_library(pool ThreadPool.cpp ThreadPool.h)
add_library(log ${LOG_SRC})
add_executable(TcpServer main.cpp)
target_link_libraries(TcpServer network pool pthread log)